<resources>
    <string name="app_name">PlavarenZA</string>
    <string name="action_settings">Settings</string>

    <string name="home_pool">Pool</string>
    <string name="home_sauna">Sauna</string>

    <string name="day_today">"Today: "</string>
    <string name="day_moday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <string name="state_connection">No connection</string>
    <string name="pool_empty">Empty list,\n check connection.</string>

    <string name="settings_caption">App settings</string>
    <string name="settings_download">Download settings</string>
    <string name="settings_optAuto">Automatic</string>
    <string name="settings_optManual">Manual</string>
    <string name="settings_optManualText"> Download and save of new schedule is done only on swipe down</string>
    <string name="settings_optAutoText"> Download and save of new schedule is done automatically always when app starts</string>

    <string name="about_caption">About</string>
    <string name="about_version">Version</string>
    <string name="about_text">Apps downloads and stores public swimming schedule of Žilina swimming pool.</string>

    <string name="sauna_select">Select type:</string>
    <string name="sauna_women">Women</string>
    <string name="sauna_men">Men</string>
    <string name="sauna_together">Mixed</string>
    <string name="sauna_week1">I.  Zone 12:00-15:30</string>
    <string name="sauna_week2">II. Zone 16:00-20:00</string>
    <string name="sauna_weekend1">I.  Zone 11:00-14:30</string>
    <string name="sauna_weekend2">II. Zone 15:00-18:00</string>
    <string name="sauna_weekend3">II. Zone 09:00-20:00</string>
    <string name="sauna_check_online">Check program online</string>

</resources>
